# gray_solutions_agent

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  voice_english.py  voicebot.py  voicebot_tamil.py
Conversation_State/: intent.py
api/: appointments.py  auth.py  dashboard.py  login.py  logs.py
database/: appointment_service.py  calendar.py  db.py  schemas.py  slots.py  time_utils.py  tools.py  utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/images/: Press Shop Performance Repor1 t  Sep-25.xlsx  TNIP2021_mitsuba_Mayiladuthurai_2026-04-10.xlsx
frontend/src/: App.jsx  api.js  index.css  keycloak.js  main.jsx
frontend/src/admin/: AdminApp.jsx  admin.css
frontend/src/admin/components/: AddNewClinicModal.jsx  AdminLayout.jsx
frontend/src/admin/pages/: CallLogs.jsx  (+6 more)
frontend/src/components/: AuthContext.jsx  Login.jsx  ResetPasswordModal.jsx
inbound/: main.py  voice_english.py  voicebot_tamil.py
intent/: intent_context_injector.py  intent_processor.py  intent_service.py
keycloak/: realm-export.json
nginx/: default.conf
outbound/: bot.py  make_call.py  server.py
outbound/prompt/: outbound_prompt.py
pipeline/audio/vad/: silero.py
pipeline/serializers/: exotel.py
pipeline/services/: exotel_whatsapp.py
pipeline/services/deepgram/: stt.py
pipeline/services/elevenlabs/: tts.py
pipeline/services/openai/: llm.py
pipeline/transports/: fastapi.py
processors/: hybrid_intent_processor.py
prompt/: clinic_system_prompt.py
prompt/System_Prompt/: behavior.py
